# scrcpy

./: .gitignore  meson.build  meson_options.txt
app/src/: control_msg.c  control_msg.h  input_manager.c  scrcpy.c
ime/: meson.build
ime/scripts/: build-wrapper.sh
server/src/main/java/com/genymobile/scrcpy/: ControlMessage.java  ControlMessageReader.java  Controller.java  Device.java
server/src/main/java/com/genymobile/scrcpy/wrappers/: ActivityManager.java  ServiceManager.java
